--- a/app/src/main/res/layout/activity_tambah_layanan.xml
+++ b/app/src/main/res/layout/activity_tambah_layanan.xml
@@ -5,6 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgtambahactivity"
+    android:padding="5dp"
     tools:context=".layanan.TambahLayanan">
 
     <TextView
@@ -12,20 +14,22 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvTambahLayanan"
         android:text="Tambah Layanan"
+        android:textColor="@color/blackwhite"
         android:fontFamily="@font/poppins_bold"
-        android:textSize="28sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvNamaLayanan"
-        android:text="Nama Layanan"
+        android:text="@string/card_layanan_namalayanan"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,8 +37,9 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Contoh: Cuci, Setrika, Cuci Setrika dll"
+        android:layout_height="48dp"
+        android:hint="@string/card_layanan_namalayanan"
+        android:textColorHint="#bbbbbb"
         android:fontFamily="@font/poppins"
         android:id="@+id/etNamaLayanan"
         android:paddingStart="10dp"
@@ -48,9 +53,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvCabangLayanan"
-        android:text="Cabang"
+        android:text="@string/tv_cabang"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,9 +64,10 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Cabang"
+        android:layout_height="48dp"
+        android:hint="@string/tv_cabang"
         android:fontFamily="@font/poppins"
+        android:textColorHint="#bbbbbb"
         android:id="@+id/etCabangLayanan"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
@@ -73,9 +80,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvKeterangan"
-            android:text="Keterangan"
+        android:text="Keterangan"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,12 +91,13 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="48dp"
         android:hint="Keterangan Layanan"
         android:fontFamily="@font/poppins"
         android:id="@+id/etKeterangan"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
+        android:textColorHint="#bbbbbb"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
@@ -100,6 +109,7 @@
         android:id="@+id/tvHargaLayanan"
         android:text="Harga Layanan"
         android:fontFamily="@font/poppins_bold"
+        android:textColor="@color/blackwhite"
         android:textSize="18sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
@@ -112,8 +122,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Kiloan"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:fontFamily="@font/poppins"
+        android:textColor="@color/blackwhite"
         android:id="@+id/tvKiloan"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="10dp"
@@ -123,12 +134,13 @@
 
     <EditText
         android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_height="48dp"
         android:hint="Harga per Kilo"
         android:fontFamily="@font/poppins"
         android:id="@+id/etDeskripsiLayanan"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
+        android:textColorHint="#bbbbbb"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
@@ -139,8 +151,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Satuan"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:fontFamily="@font/poppins"
+        android:textColor="@color/blackwhite"
         android:id="@+id/tvSatuan"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="10dp"
@@ -150,12 +163,13 @@
 
     <EditText
         android:layout_width="300dp"
-        android:layout_height="50dp"
+        android:layout_height="48dp"
         android:hint="Harga per Satuan"
         android:fontFamily="@font/poppins"
         android:id="@+id/etHargaSatuan"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
+        android:textColorHint="#bbbbbb"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="10dp"
@@ -165,11 +179,11 @@
     <Button
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:text="SIMPAN"
+        android:text="@string/bsimpan"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#16528E"
+        android:backgroundTint="@color/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etHargaSatuan"/>
