--- a/app/src/main/res/layout/card_data_tambahan.xml
+++ b/app/src/main/res/layout/card_data_tambahan.xml
@@ -7,7 +7,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCARD_TAMBAHAN"
         android:layout_width="match_parent"
-        android:layout_height="215dp"
+        android:layout_height="220dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -21,20 +21,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/tvIdPelanggan"
-                android:text="ID Pelanggan"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:text="ID Tambahan"
+                android:fontFamily="@font/poppins_bold"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/poppins_bold"/>
+                android:background="#7181C5"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:padding="8dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvNamaPelanggan"
-                android:text="Nama Pelanggan"
+                android:id="@+id/tvNamaLayananTambahan"
+                android:text="@string/card_tambahan_namalayanan"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -44,8 +47,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/NamaTambahan"
-                android:text="Nama Tambahan"
+                android:id="@+id/tvHarga"
+                android:textColor="@color/blackwhite"
+                android:text="@string/card_tambahan_harga"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -54,8 +58,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/HargaTambahan"
-                android:text="Harga Tambahan"
+                android:id="@+id/tvNamaCabang"
+                android:text="@string/card_tambahan_namacabang"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -64,8 +69,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/DeskripsiTambahan"
-                android:text="Deksripsi Tambahan"
+                android:id="@+id/tvStatus"
+                android:text="@string/card_tambahan_status"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -79,7 +85,8 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/bHubungi"
-                    android:text="Edit Tambahan"
+                    android:text="Edit"
+                    android:textColor="@color/white"
                     android:fontFamily="@font/poppins_bold"
                     android:backgroundTint="#185CB4"
                     android:layout_marginStart="8dp"
@@ -89,7 +96,8 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/bLihat"
-                    android:text="Lihat"
+                    android:text="@string/card_pelanggan_blihat"
+                    android:textColor="@color/white"
                     android:fontFamily="@font/poppins_bold"
                     android:backgroundTint="#54DED7"
                     android:layout_marginStart="8dp"
