--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bg">#F1F2F4</color>
+    <color name="blackwhite">#FF000000</color>
+    <color name="button">#185CB4</color>
+    <color name="bgtambahactivity">#F1F2F4</color>
 </resources>
