--- a/app/src/main/res/drawable/border_editor.xml
+++ b/app/src/main/res/drawable/border_editor.xml
@@ -3,6 +3,6 @@
 <solid android:color="@color/white"/>
     <stroke
         android:width="2dp"
-        android:color="@color/black"/>
+        android:color="#14447E"/>
     <corners android:radius="10dp"/>
 </shape>
