--- a/app/src/main/res/layout/activity_data_cabang.xml
+++ b/app/src/main/res/layout/activity_data_cabang.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg"
     tools:context=".cabang.DataCabang">
 
     <androidx.recyclerview.widget.RecyclerView
