--- a/app/src/main/res/layout/activity_tambah_pegawai.xml
+++ b/app/src/main/res/layout/activity_tambah_pegawai.xml
@@ -5,27 +5,31 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgtambahactivity"
+    android:padding="5dp"
     tools:context=".pegawai.tambah_pegawai">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvTambahPegawai"
-        android:text="Tambah Pegawai"
+        android:text="@string/tv_tambah_pegawai"
         android:fontFamily="@font/poppins_bold"
-        android:textSize="28sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvNama"
-        android:text="Nama Lengkap"
+        android:text="@string/tv_nama_lengkap"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,10 +37,11 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Nama Lengkap"
+        android:layout_height="48dp"
+        android:hint="@string/tv_nama_lengkap"
         android:fontFamily="@font/poppins"
         android:paddingStart="10dp"
+        android:textColorHint="#bbbbbb"
         android:id="@+id/etNama"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
@@ -48,9 +53,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvJK"
-        android:text="Jenis Kelamin"
+        android:text="@string/card_pegawai_jeniskelamin"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,9 +64,10 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Jenis Kelamin"
+        android:layout_height="48dp"
+        android:hint="@string/card_pegawai_jeniskelamin"
         android:fontFamily="@font/poppins"
+        android:textColorHint="#bbbbbb"
         android:paddingStart="10dp"
         android:id="@+id/etJK"
         android:background="@drawable/border_editor"
@@ -73,9 +80,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvTTL"
-        android:text="Tempat Tanggal Lahir"
+        android:text="@string/card_pegawai_ttl"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,12 +91,13 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Tempat, Tanggal, Lahir"
+        android:layout_height="48dp"
+        android:hint="@string/card_pegawai_ttl"
         android:fontFamily="@font/poppins"
         android:paddingStart="10dp"
         android:id="@+id/etTTL"
         android:background="@drawable/border_editor"
+        android:textColorHint="#bbbbbb"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
@@ -97,10 +106,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvJabatan"
-        android:text="Jabatan"
+        android:id="@+id/tvCabang"
+        android:text="@string/card_cabang"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,24 +118,26 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Jabatan"
+        android:layout_height="48dp"
+        android:hint="@string/card_cabang"
         android:fontFamily="@font/poppins"
         android:id="@+id/etJabatan"
         android:paddingStart="10dp"
+        android:textColorHint="#bbbbbb"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tvJabatan"/>
+        app:layout_constraintTop_toBottomOf="@id/tvCabang"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvAlamat"
-        android:text="Alamat"
+        android:text="@string/card_pelanggan_alamat"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,9 +145,10 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Alamat"
+        android:layout_height="48dp"
+        android:hint="@string/card_pelanggan_alamat"
         android:fontFamily="@font/poppins"
+        android:textColorHint="#bbbbbb"
         android:id="@+id/etAlamat"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
@@ -148,9 +161,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/tvNohp"
-    android:text="No Hp Aktif"
+    android:text="@string/card_pelanggan_nohp"
     android:fontFamily="@font/poppins"
-    android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+    android:textSize="16sp"
     android:layout_marginTop="10dp"
     android:layout_marginStart="10dp"
     app:layout_constraintStart_toStartOf="parent"
@@ -158,9 +172,10 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="No Hp Aktif"
+        android:layout_height="48dp"
+        android:hint="@string/card_pelanggan_nohp"
         android:fontFamily="@font/poppins"
+        android:textColorHint="#bbbbbb"
         android:id="@+id/etNohp"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
@@ -173,11 +188,12 @@
     <Button
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:text="SIMPAN"
+        android:text="@string/bsimpan"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#16528E"
+        android:backgroundTint="@color/button"
+        android:fontFamily="@font/poppins_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/etNohp"/>
