--- a/app/src/main/res/layout/activity_tambah_pelanggan.xml
+++ b/app/src/main/res/layout/activity_tambah_pelanggan.xml
@@ -5,27 +5,31 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bgtambahactivity"
+    android:padding="5dp"
     tools:context=".pelanggan.TambahPelanggan">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvTambahPelanggan"
-        android:text="Tambah Pelanggan"
+        android:text="@string/tvtambah_pelanggan"
+        android:textColor="@color/blackwhite"
         android:fontFamily="@font/poppins_bold"
-        android:textSize="28sp"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvNama"
-        android:text="Nama Lengkap"
+        android:text="@string/tv_nama_lengkap"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,13 +37,14 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Nama Lengkap"
+        android:layout_height="48dp"
+        android:hint="@string/tv_nama_lengkap"
         android:fontFamily="@font/poppins"
         android:paddingStart="10dp"
         android:id="@+id/etNama"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
+        android:textColorHint="#bbbbbb"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/tvNama"/>
@@ -48,9 +53,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvAlamat"
-        android:text="Alamat"
+        android:text="@string/card_pelanggan_alamat"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,13 +64,14 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="Alamat"
+        android:layout_height="48dp"
+        android:hint="@string/card_pelanggan_alamat"
         android:fontFamily="@font/poppins"
         android:id="@+id/etAlamat"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
+        android:textColorHint="#bbbbbb"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/tvAlamat"/>
@@ -73,9 +80,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvNohp"
-        android:text="No HP Aktif"
+        android:text="@string/card_pelanggan_nohp"
         android:fontFamily="@font/poppins"
-        android:textSize="18sp"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,27 +91,58 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="No HP Aktif"
+        android:layout_height="48dp"
+        android:hint="@string/card_pelanggan_nohp"
         android:fontFamily="@font/poppins"
         android:id="@+id/etNohp"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
+        android:textColorHint="#bbbbbb"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/tvNohp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvNamaCabang"
+        android:text="@string/nama_cabang"
+        android:fontFamily="@font/poppins"
+        android:textColor="@color/blackwhite"
+        android:textSize="16sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etNohp"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:hint="@string/nama_cabang"
+        android:fontFamily="@font/poppins"
+        android:id="@+id/etNamaCabang"
+        android:paddingStart="10dp"
+        android:background="@drawable/border_editor"
+        android:layout_marginStart="10dp"
+        android:textColorHint="#bbbbbb"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/tvNamaCabang"/>
+
     <Button
         android:layout_width="300dp"
         android:layout_height="55dp"
-        android:text="SIMPAN"
+        android:text="@string/bsimpan"
+        android:id="@+id/bSimpan"
+        android:textStyle="bold"
+        android:fontFamily="@font/poppins_bold"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="20dp"
-        android:backgroundTint="#16528E"
+        android:backgroundTint="@color/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etNohp"/>
+        app:layout_constraintTop_toBottomOf="@id/etNamaCabang"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
