--- a/app/src/main/res/layout/card_data_cabang.xml
+++ b/app/src/main/res/layout/card_data_cabang.xml
@@ -21,20 +21,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/tvIdCabang"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
                 android:text="ID Cabang"
+                android:fontFamily="@font/poppins_bold"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/poppins_bold"/>
+                android:background="#7181C5"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:padding="8dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvNamaCabang"
-                android:text="Nama Cabang"
+                android:text="@string/nama_cabang"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -44,8 +47,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/AlamatCabang"
+                android:id="@+id/tvAlamatCabang"
                 android:text="Alamat Cabang"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -56,6 +60,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/NoHpCabang"
                 android:text="No HP Cabang"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -66,6 +71,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/ManagerCabang"
                 android:text="Manager Cabang"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -79,19 +85,21 @@
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/bHubungi"
-                    android:text="Edit Cabang"
+                    android:text="@string/tvedit"
                     android:fontFamily="@font/poppins_bold"
                     android:backgroundTint="#185CB4"
                     android:layout_marginStart="8dp"
+                    android:textColor="@color/white"
                     android:layout_marginEnd="5dp"/>
 
                 <Button
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/bLihat"
-                    android:text="Lihat"
+                    android:text="@string/card_pelanggan_blihat"
                     android:fontFamily="@font/poppins_bold"
                     android:backgroundTint="#54DED7"
+                    android:textColor="@color/white"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="5dp"/>
             </LinearLayout>
