--- a/app/src/main/res/layout/card_data_layanan.xml
+++ b/app/src/main/res/layout/card_data_layanan.xml
@@ -7,7 +7,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCARD_LAYANAN"
         android:layout_width="match_parent"
-        android:layout_height="215dp"
+        android:layout_height="135dp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -21,20 +21,23 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/tvIdLayanan"
-                android:text="ID Layanan"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:text="@string/card_layanan_id"
+                android:fontFamily="@font/poppins_bold"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/poppins_bold"/>
+                android:background="#C571C4"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:padding="8dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvNamaLayanan"
-                android:text="Nama Layanan"
+                android:text="@string/card_layanan_namalayanan"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -44,8 +47,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/CabangLayanan"
-                android:text="Cabang Layanan"
+                android:id="@+id/tvCabangLayanan"
+                android:text="@string/nama_cabang"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
@@ -54,47 +58,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/JenisLayanan"
-                android:text="Jenis Layanan"
+                android:id="@+id/tvHargaLayanan"
+                android:text="@string/card_tambahan_harga"
+                android:textColor="@color/blackwhite"
                 android:textSize="16sp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/poppins"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/HargaLayanan"
-                android:text="Harga per Kilo/Satuan"
-                android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:fontFamily="@font/poppins"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <Button
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/bHubungi"
-                    android:text="Edit Layanan"
-                    android:fontFamily="@font/poppins_bold"
-                    android:backgroundTint="#185CB4"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="5dp"/>
-
-                <Button
-                    android:layout_width="180dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/bLihat"
-                    android:text="Lihat"
-                    android:fontFamily="@font/poppins_bold"
-                    android:backgroundTint="#54DED7"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="5dp"/>
-            </LinearLayout>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
